central/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: special-seminar-gateway
