central/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: central-ingress
  annotations:
    kubernetes.io/ingress.class: gloo
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: web-svc
          servicePort: 8080
