central/pdns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdns-svc
spec:
  type: ClusterIP
  selector:
    app: pdns
  ports:
    - port: 53
      targetPort: 53
      name: dns
      protocol: UDP
